--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script type="systemjs-importmap">
       {
         "imports": {
-          "root-config": "https://ember-micro-frontends.github.io/root-application.js"
+          "root-config": "https://ember-micro-frontends.github.io/root-config/root-application.js"
         }
       }
     </script>
