--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
           >
             <div class="flex items-center justify-between">
               <a class="p-6" href="/">Home</a>
-              <a class="p-6" href="/people">People</a>
-              <a class="p-6" href="/planets">Planets</a>
+              <a class="p-6" href="/root-config/people">People</a>
+              <a class="p-6" href="/root-config/planets">Planets</a>
             </div>
             <div class="flex items-center justify-between">
               <a
