--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
           </div>
         </nav>
         <div class="main-content mt-16">
-          <route path="people">
+          <route path="root-config/people">
             <application name="people"></application>
             <div id="people"></div>
           </route>
-          <route path="planets">
+          <route path="root-config/planets">
             <application name="planets"></application>
             <div id="planets"></div>
           </route>
