--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
     <meta name="importmap-type" content="systemjs-importmap" />
     <script type="systemjs-importmap" src="https://storage.googleapis.com/react.microfrontends.app/importmap.json" ></script>
 
-    <!--<script type="systemjs-importmap">-->
-      <!--{-->
-        <!--"imports": {-->
-          <!--"root-config": "https://ember-micro-frontends.github.io/root-config/root-application.js"-->
-        <!--}-->
-      <!--}-->
-    <!--</script>-->
- 
     <script type="systemjs-importmap">
       {
         "imports": {
-          "root-config": "http://localhost:9000/root-application.js"
+          "root-config": "https://ember-micro-frontends.github.io/root-config/root-application.js"
         }
       }
     </script>
+ 
+    <!--<script type="systemjs-importmap">-->
+      <!--{-->
+        <!--"imports": {-->
+          <!--"root-config": "http://localhost:9000/root-application.js"-->
+        <!--}-->
+      <!--}-->
+    <!--</script>-->
     <script src="https://cdn.jsdelivr.net/npm/import-map-overrides/dist/import-map-overrides.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/systemjs/dist/system.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/systemjs/dist/extras/amd.min.js"></script>
